<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="edu.orangecoastcollege.cs273.rmillett.northernlightsanimation.AnimationActivity">

    <ImageView
        android:id="@+id/lightsImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:adjustViewBounds="true"
        android:background="@drawable/lights1"
        android:contentDescription="@string/lights_image_view_text"/>

    <Button
        android:id="@+id/frameAnimButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="toggleFrameAnim"
        android:text="@string/frame_anim_button_text_off" />

    <Button
        android:id="@+id/rotateAnimButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="toggleRotateAnim"
        android:text="@string/rotate_anim_button_text" />

    <Button
        android:id="@+id/shakeAnimButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="toggleShakeAnim"
        android:text="@string/shake_anim_button_text" />

    <Button
        android:id="@+id/customAnimButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="toggleCustomAnim"
        android:text="@string/custom_anim_button_text_off" />
</LinearLayout>
